minor updates, everything is setup for plotting

--- a/examples/SingleCondition - homogeneous_data_analysis.ipynb
+++ b/examples/SingleCondition - homogeneous_data_analysis.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using DiffusionMLE, Plots, PyCall, CSV, DataFrames, HDF5\r\n",
-    "plotlyjs()"
+    "using DiffusionMLE, Plots, PyCall, CSV, DataFrames, HDF5"
    ]
   },
   {
@@ -72,9 +71,9 @@
    "outputs": [],
    "source": [
     "# Import some test trajectories...\r\n",
-    "tester = raw\"C:\\Users\\User\\OneDrive\\Documents\\Python Programs\\Piezo1_MLE\\Trajectory_CSVs\\test_data.csv\"\r\n",
-    "test_data = CSV.read(tester, DataFrame)\r\n",
-    "trackIDs = unique(test_data, :ID).ID"
+    "tester = raw\"C:\\Users\\User\\OneDrive\\Documents\\Python Programs\\Piezo1_MLE\\Trajectory_CSVs\\tdTomato_Mobile\\tdTomato_37Degree_mobile.csv\"\r\n",
+    "test_data = CSV.read(tester, DataFrame);\r\n",
+    "trackIDs = unique(test_data, :ID).ID;"
    ]
   },
   {
@@ -106,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try1, B_values = load_traj_csv(tester)"
+    "try1, B_values = load_traj_csv(tester);"
    ]
   },
   {
@@ -140,9 +139,9 @@
     "\r\n",
     "println()\r\n",
     "\r\n",
-    "println(\"Ground truth:\")\r\n",
-    "println(string(\"a2 = \", a2))\r\n",
-    "println(string(\"σ2 = \", σ2))"
+    "# println(\"Ground truth:\")\r\n",
+    "# println(string(\"a2 = \", a2))\r\n",
+    "# println(string(\"σ2 = \", σ2))"
    ]
   },
   {
@@ -205,6 +204,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Julia 1.6.1",
+   "language": "julia",
    "name": "julia-1.6"
   },
   "language_info": {
